Fix scrollbar display on Chrome

--- a/app/assets/stylesheets/profile.sass
+++ b/app/assets/stylesheets/profile.sass
@@ -1,2 +1,5 @@
+ul.thumbnails.image_picker_selector
+  overflow: hidden
+
 .image_picker_image
   width: 64px
